--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/mapo_peacefull"
                 android:text="@string/app_name"
+                android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="25sp" />
