--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="slateGrey">#78849E</color>
     <color name="lightGrey">#FAFAFA</color>
     <color name="cyan">#3ACCE1</color>
+    <color name="darkBlue">#2A2E43</color>
 </resources>
