--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="lightGrey">#FAFAFA</color>
     <color name="cyan">#3ACCE1</color>
     <color name="darkBlue">#2A2E43</color>
+    <color name="slateBlue">#665EFF</color>
 </resources>
