--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,32 @@
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <ImageView
-                android:id="@+id/drawer_menu"
+            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_menu"
-                tools:ignore="ContentDescription" />
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/drawer_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_menu"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/new_sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|center"
+                    android:layout_marginStart="12dp"
+                    android:src="@drawable/ic_new"
+                    android:visibility="invisible"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
 
             <TextView
                 android:layout_width="0dp"
@@ -47,10 +64,10 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/mapo_peacefull"
                 android:text="@string/app_name"
-                android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="#000000"
-                android:textSize="25sp" />
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/btn_search"
