--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/notification_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -33,10 +34,12 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/notification_seen_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="12dp"
+            android:enabled="false"
             android:fontFamily="@font/mapo_peacefull"
             android:text="@string/seenAll"
             android:textColor="@color/grey"
@@ -48,6 +51,7 @@
         android:id="@+id/notification_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"/>
+        android:layout_marginTop="5dp"
+        android:background="@color/white" />
 
 </LinearLayout>
