--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,65 +33,134 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <FrameLayout
-        android:id="@+id/profile_image_container"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
-        tools:ignore="UselessParent">
+        android:layout_marginHorizontal="33dp"
+        android:layout_marginTop="105dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp">
 
-        <ImageView
-            android:id="@+id/edit_profile_image"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="@drawable/profile_image_background"
-            android:contentDescription="@string/profileImage"
-            android:padding="9dp"
-            android:src="@drawable/default_user_photo" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:background="@drawable/user_image_edit"
-            android:contentDescription="@string/editIcon"
-            android:padding="8dp"
-            android:src="@drawable/ic_edit" />
+            <FrameLayout
+                android:id="@+id/profile_image_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="20dp"
+                tools:ignore="UselessParent">
 
-    </FrameLayout>
+                <ImageView
+                    android:id="@+id/edit_profile_image"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@drawable/profile_image_background"
+                    android:contentDescription="@string/profileImage"
+                    android:padding="9dp"
+                    android:src="@drawable/default_user_photo" />
 
-    <TextView
-        android:id="@+id/profile_userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profile_image_container"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/jsdongkang_regular"
-        android:text="유저 이름"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:background="@drawable/user_image_edit"
+                    android:contentDescription="@string/editIcon"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_edit" />
 
-    <TextView
-        android:id="@+id/profile_userEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profile_userName"
-        android:layout_centerHorizontal="true"
-        android:text="이메일 주소"
-        android:textSize="12sp" />
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/profile_userName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="26.5dp"
+                android:layout_toEndOf="@id/profile_image_container"
+                android:fontFamily="@font/jsdongkang_regular"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/profile_userEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profile_userName"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_toEndOf="@id/profile_image_container"
+                android:fontFamily="@font/jsdongkang_regular"
+                android:textSize="13sp" />
+
+            <FrameLayout
+                android:id="@+id/status_message_container"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profile_userEmail"
+                android:layout_marginStart="-2dp"
+                android:layout_marginTop="8dp"
+                android:layout_toEndOf="@id/profile_image_container"
+                android:background="@drawable/status_message_edit">
+
+                <TextView
+                    android:id="@+id/status_message_text_view"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:enabled="true"
+                    android:padding="4dp"
+                    android:singleLine="true"
+                    android:textSize="12sp"
+                    android:visibility="visible" />
+
+                <ImageView
+                    android:id="@+id/status_message_image_view"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="end|center_vertical"
+                    android:paddingStart="1dp"
+                    android:paddingTop="1.5dp"
+                    android:paddingEnd="6dp"
+                    android:src="@drawable/ic_edit"
+                    android:visibility="visible"
+                    tools:ignore="ContentDescription" />
+
+                <EditText
+                    android:id="@+id/edit_status_message"
+                    android:layout_width="160dp"
+                    android:layout_height="35dp"
+                    android:autofillHints="상태 메세지 입력"
+                    android:backgroundTint="@color/black"
+                    android:enabled="false"
+                    android:fontFamily="@font/jsdongkang_regular"
+                    android:hint="상태메세지 표시"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
+
+            </FrameLayout>
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/user_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profile_userEmail"
+        android:layout_below="@id/profile_container"
         android:layout_marginHorizontal="33dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:background="@color/white"
-        app:cardCornerRadius="17dp"
+        app:cardCornerRadius="20dp"
         app:cardElevation="4dp">
 
         <LinearLayout
@@ -217,7 +286,7 @@
         android:layout_marginStart="33dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="33dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="54dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp">
 
