--- a/app/src/main/res/layout/request_notification_item.xml
+++ b/app/src/main/res/layout/request_notification_item.xml
@@ -45,9 +45,10 @@
 
         <ImageView
             android:id="@+id/request_user_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
             android:layout_below="@id/friend_request_icon"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="17dp"
             android:layout_marginTop="19dp"
             android:layout_marginBottom="13dp"
@@ -62,48 +63,57 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/friend_request_icon"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:layout_toEndOf="@id/request_user_image"
             android:fontFamily="@font/mapo_peacefull"
             android:text="유저 이름"
             android:textColor="@color/black"
-            android:textSize="17sp" />
+            android:textSize="16sp" />
 
-        <!--
-            <ImageButton
-                android:id="@+id/request_refuse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/friend_request_icon"
-                android:layout_marginTop="22dp"
-                android:layout_marginEnd="11dp"
-                android:layout_toStartOf="@id/request_approve"
-                android:background="@drawable/round_button_east_bay"
-                android:padding="11dp"
-                android:src="@drawable/ic_cancel"
-                tools:ignore="ContentDescription" />
+        <TextView
+            android:id="@+id/request_user_status_message"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/request_user_name"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="1dp"
+            android:layout_toEndOf="@id/request_user_image"
+            android:text="유저 상태메세지"
+            android:textSize="12sp" />
 
-            <ImageButton
-                android:id="@+id/request_approve"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/friend_request_icon"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="22dp"
-                android:layout_marginEnd="14dp"
-                android:background="@drawable/round_button_sage"
-                android:padding="11dp"
-                android:src="@drawable/ic_check"
-                tools:ignore="ContentDescription" />
-        -->
+        <ImageButton
+            android:id="@+id/request_refuse"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/friend_request_icon"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="11dp"
+            android:layout_toStartOf="@id/request_approve"
+            android:background="@drawable/round_button_east_bay"
+            android:padding="11dp"
+            android:src="@drawable/ic_cancel"
+            tools:ignore="ContentDescription" />
+
+        <ImageButton
+            android:id="@+id/request_approve"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/friend_request_icon"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="17dp"
+            android:background="@drawable/round_button_sage"
+            android:padding="11dp"
+            android:src="@drawable/ic_check"
+            tools:ignore="ContentDescription" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/notification_seen"
-        android:layout_width="match_parent"
-        android:layout_height="102dp"
-        android:background="#BFFFFFFF"
-        android:orientation="vertical"
-        android:visibility="invisible" />
+    <!--    <LinearLayout
+            android:id="@+id/notification_seen"
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            android:background="#BFFFFFFF"
+            android:orientation="vertical"
+            android:visibility="invisible" />-->
 
 </FrameLayout>
