--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -1,68 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/place_id"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="장소 ID" />
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="13dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="5dp">
 
-    <TextView
-        android:id="@+id/place_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="장소 이름" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/place_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="카테고리" />
+            <ImageView
+                android:id="@+id/place_main_image"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/place_main_image_background"
+                android:padding="20dp"
+                android:src="@drawable/ic_default_place_image"
+                tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_group_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="그룹핑 카테고리" />
+            <LinearLayout
+                android:id="@+id/place_sub_image_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/place_main_image"
+                android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/place_phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전화번호" />
+                <ImageView
+                    android:id="@+id/place_sub_image1"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="상세정보 URL" />
+                <ImageView
+                    android:id="@+id/place_sub_image2"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="도로명 주소" />
+                <ImageView
+                    android:id="@+id/place_sub_image3"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="거리" />
+                <ImageView
+                    android:id="@+id/place_sub_image4"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_x"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="x좌표" />
+                <ImageView
+                    android:id="@+id/place_sub_image5"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/place_y"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:text="y좌표" />
+                <ImageView
+                    android:id="@+id/place_sub_image6"
+                    android:layout_width="0dp"
+                    android:layout_height="33dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="14dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/place_sub_image_background"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/place_name_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/place_sub_image_container"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/place_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:fontFamily="@font/mapo_peacefull"
+                    android:text="장소 이름"
+                    android:textColor="@color/black"
+                    android:textSize="19sp" />
+
+                <TextView
+                    android:id="@+id/place_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginTop="2dp"
+                    android:fontFamily="@font/mapo_peacefull"
+                    android:text="도로명 주소"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/place_sub_text_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/place_name_container"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/place_group_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="9dp"
+                    android:background="@drawable/place_sub_text_background"
+                    android:fontFamily="@font/bm_hanna"
+                    android:paddingHorizontal="11dp"
+                    android:paddingVertical="6dp"
+                    android:text="그룹 카테고리"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    tools:ignore="SmallSp" />
+
+                <TextView
+                    android:id="@+id/place_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="9dp"
+                    android:background="@drawable/place_sub_text_background"
+                    android:fontFamily="@font/bm_hanna"
+                    android:paddingHorizontal="11dp"
+                    android:paddingVertical="6dp"
+                    android:text="카테고리"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:textStyle="bold"
+                    tools:ignore="SmallSp" />
+
+                <TextView
+                    android:id="@+id/place_digit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginEnd="16dp"
+                    android:singleLine="true"
+                    android:background="@drawable/place_sub_text_background"
+                    android:fontFamily="@font/bm_hanna"
+                    android:paddingHorizontal="11dp"
+                    android:paddingVertical="6dp"
+                    android:text="연락처"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    tools:ignore="SmallSp" />
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/place_sub_text_container"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/place_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/place_distance_background"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="5dp"
+                    android:text="00m"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
