--- a/app/src/main/res/layout/fragment_surrounding.xml
+++ b/app/src/main/res/layout/fragment_surrounding.xml
@@ -6,6 +6,11 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="1dp"
+        android:layout_height="1dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/surrounding_place_recycler"
         android:layout_width="match_parent"
