--- a/app/src/main/res/layout/fragment_surrounding.xml
+++ b/app/src/main/res/layout/fragment_surrounding.xml
@@ -11,13 +11,29 @@
         android:layout_width="1dp"
         android:layout_height="1dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/surrounding_place_recycler"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="85dp"
-        android:layout_marginBottom="50dp"
-        android:background="@color/white"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_marginBottom="50dp">
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/surrounding_spinKitView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            app:SpinKit_Color="@color/cyan"
+            app:SpinKit_Style="Wave" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/surrounding_place_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="invisible"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+    </FrameLayout>
 
 </RelativeLayout>
