--- a/app/src/main/res/drawable/white_gradient_270.xml
+++ b/app/src/main/res/drawable/white_gradient_270.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#FFFFFFFF"
-        android:centerColor="#B3FFFFFF"
+        android:angle="270"
+        android:centerColor="#E6FFFFFF"
         android:endColor="#00FFFFFF"
-        android:angle="270"/>
+        android:startColor="#FFFFFFFF" />
 
 </shape>
