--- a/app/src/main/res/drawable/white_gradient_90.xml
+++ b/app/src/main/res/drawable/white_gradient_90.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#FFFFFFFF"
-        android:centerColor="#FFFFFFFF"
-        android:endColor="#05FFFFFF"
-        android:angle="90"/>
+        android:angle="90"
+        android:centerColor="#FAFFFFFF"
+        android:endColor="#00FFFFFF"
+        android:startColor="#FFFFFFFF" />
 
 </shape>
