--- a/app/src/main/res/layout/fragment_surrounding.xml
+++ b/app/src/main/res/layout/fragment_surrounding.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="1dp"
-        android:layout_height="1dp" />
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="85dp"
-        android:layout_marginBottom="50dp">
+        tools:ignore="UselessParent">
 
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/surrounding_spinKitView"
@@ -31,6 +26,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
+            android:clipToPadding="false"
+            android:paddingTop="100dp"
+            android:paddingBottom="70dp"
             android:visibility="invisible"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
