--- a/app/src/main/res/layout/fragment_mylocation.xml
+++ b/app/src/main/res/layout/fragment_mylocation.xml
@@ -1,15 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/white">
 
-    <com.mapbox.mapboxsdk.maps.MapView
-        android:id="@+id/mapView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mapbox_renderTextureMode="true" />
+        tools:ignore="UselessParent">
 
-</LinearLayout>
+        <com.mapbox.mapboxsdk.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:mapbox_renderTextureMode="true" />
+
+        <!--        <androidx.cardview.widget.CardView
+                    android:id="@+id/place_thumbNail_container"
+                    android:layout_width="200dp"
+                    android:layout_height="80dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="430dp"
+                    android:visibility="gone"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="2dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/place_thumbNail_image"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="13dp"
+                            android:background="@drawable/place_main_image_background"
+                            android:padding="7dp"
+                            android:src="@drawable/ic_default_place_image"
+                            tools:ignore="ContentDescription" />
+
+                        <TextView
+                            android:id="@+id/place_thumbNail_name"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="7dp"
+                            android:layout_marginTop="11dp"
+                            android:layout_toEndOf="@id/place_thumbNail_image"
+                            android:fontFamily="@font/mapo_peacefull"
+                            android:singleLine="true"
+                            android:text="장소 이름"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/place_thumbNail_address"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/place_thumbNail_name"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="1dp"
+                            android:layout_toEndOf="@id/place_thumbNail_image"
+                            android:fontFamily="@font/bm_hanna"
+                            android:singleLine="true"
+                            android:text="주소 표시"
+                            android:textColor="@color/bermudaGrey"
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:id="@+id/place_thumbNail_digit"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/place_thumbNail_address"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="1dp"
+                            android:layout_toEndOf="@id/place_thumbNail_image"
+                            android:fontFamily="@font/bm_hanna"
+                            android:singleLine="true"
+                            android:text="전화번호"
+                            android:textSize="12sp" />
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>-->
+
+    </RelativeLayout>
+
+</FrameLayout>
