--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
+    <color name="ghostWhite">#F4F4F6</color>
     <color name="black">#000000</color>
     <color name="snow">#F7F7FA</color>
     <color name="ice">#F0F3F4</color>
-    <color name="eastBay">#444F63</color>
+    <color name="eastBay">#454F63</color>
     <color name="grey">#c8c8c8</color>
     <color name="slateGrey">#78849E</color>
     <color name="lightGrey">#FAFAFA</color>
@@ -16,10 +17,14 @@
     <color name="sage">#87BCBF</color>
     <color name="darkBlue">#2A2E43</color>
     <color name="dodgerBlue">#3497FD</color>
-    <color name="pickledBlueWood">#334856</color>
+    <color name="royalBlue">#5773FF</color>
     <color name="slateBlue">#665EFF</color>
+    <color name="vividBlue">#4265ff</color>
+    <color name="lightBlue">#544aff</color>
+    <color name="azureRadiance">#0278f2</color>
+    <color name="pickledBlueWood">#334856</color>
     <color name="mediumOrchid">#C840E9</color>
-    <color name="rust">#c55b2c </color>
+    <color name="rust">#c55b2c</color>
     <color name="green">#289c28</color>
     <color name="yellow">#ffd700</color>
 </resources>
